<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/downPaymentOptionsRadioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginHorizontal="@dimen/gd_default_margin_horizontal"
    android:visibility="gone"
    tools:visibility="visible"
    >

    <TextView
        android:id="@+id/downPaymentOptionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/gd_bnpl_down_payment_options"
        android:textFontWeight="600"
        android:textSize="16sp"
        />

    <RadioButton
        android:id="@+id/payNowRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/gd_bnpl_pay_now"
        />

    <RadioButton
        android:id="@+id/payOnDeliveryRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/gd_bnpl_pay_on_delivery"
        />

</RadioGroup>