<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".flow.pay.PaymentActivity"
    >

    <include
        android:id="@+id/appBarWithStepper"
        layout="@layout/gd_include_appbar_with_stepper"
        />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gd_default_margin_horizontal"
                android:layout_marginVertical="40dp"
                android:gravity="center_horizontal"
                android:text="@string/gd_bnpl_otp_sent"
                android:textFontWeight="600"
                />

            <net.geidea.paymentsdk.ui.widget.otp.OtpInputView
                android:id="@+id/otpInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/gd_default_margin_horizontal"
                />

            <TextView
                android:id="@+id/errorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gd_default_margin_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:gravity="center_horizontal"
                android:visibility="invisible"
                tools:visibility="visible"
                android:text="Some error message"
                android:textColor="?colorError"
                android:textSize="12sp"
                android:textFontWeight="700"
                />

            <Button
                android:id="@+id/purchaseButton"
                style="?gd_primaryButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gd_default_button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/gd_default_margin_horizontal"
                android:layout_marginTop="@dimen/gd_default_margin"
                android:enabled="false"
                android:text="@string/gd_bnpl_finalize_purchase"
                />

            <Button
                android:id="@+id/cancelButton"
                style="?gd_secondaryButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gd_default_button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/gd_default_margin_horizontal"
                android:layout_marginBottom="@dimen/gd_default_margin"
                android:text="@string/gd_button_cancel"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gd_default_margin_horizontal"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:text="@string/gd_bnpl_didnt_get_otp"
                android:textFontWeight="600"
                />

            <Button
                android:id="@+id/resendCodeButton"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/gd_default_button_height"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_horizontal"
                android:minHeight="32dp"
                android:text="@string/gd_bnpl_resend_otp"
                />

            <include layout="@layout/gd_include_valu_logo" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="48dp"
                android:contentDescription="@string/gd_content_desc_geidea_logo"
                app:srcCompat="@drawable/gd_ic_geidea"
                app:tint="@color/gd_orange"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>